Added completion script and dockerizing